--- a/content/posts/laravel-cheatsheet.mdx
+++ b/content/posts/laravel-cheatsheet.mdx
@@ -38,6 +38,7 @@ DB_PASSWORD	    = e9123402
 Closure atau anonymous function  
 `Sebuah fungsi yang ada di konsep OOP yang tidak memiliki nama alias anonymous`
 
+## Displaying all image on Public Folder
 ```php
     $img = \File::allFiles(public_path('images'));
     foreach ($img as $key => $value) {
