--- a/content/posts/laravel-cheatsheet.mdx
+++ b/content/posts/laravel-cheatsheet.mdx
@@ -34,8 +34,7 @@ DB_USERNAME	    = b136f2454a82c4
 DB_PASSWORD	    = e9123402
 ```
 
-## Notes
-Closure atau anonymous function  
+## Closure atau anonymous function  
 `Sebuah fungsi yang ada di konsep OOP yang tidak memiliki nama alias anonymous`
 
 ## Displaying all image on Public Folder
